mediastack/sonarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediastack
  labels:
    name: mediastack
