mediastack/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: mediastack
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sonarr.sancaktar.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-service
            port:
              number: 80
